SAAS-102: Added clean tokens swagger documentaiton
